crates/fossil-graph/tests/snapshots/schemas__find_neighbors_params.snap
---
source: crates/fossil-graph/tests/schemas.rs
expression: "schema_for! (discovery::FindNeighborsParams)"
---
$schema: "http://json-schema.org/draft-07/schema#"
title: FindNeighborsParams
type: object
required:
  - iri
properties:
  depth:
    default: 1
    type: integer
    format: uint8
    minimum: 0
  edge_types:
    description: Restrict traversal to a subset of edge names. Empty = all.
    default: []
    type: array
    items:
      type: string
  iri:
    type: string
  limit:
    default: 500
    type: integer
    format: uint32
    minimum: 0
additionalProperties: false
