crates/fossil-graph/tests/snapshots/schemas__find_path_params.snap
---
source: crates/fossil-graph/tests/schemas.rs
expression: "schema_for! (discovery::FindPathParams)"
---
$schema: "http://json-schema.org/draft-07/schema#"
title: FindPathParams
type: object
required:
  - source_iri
  - target_iri
properties:
  max_hops:
    default: 5
    type: integer
    format: uint8
    minimum: 0
  source_iri:
    type: string
  target_iri:
    type: string
additionalProperties: false
