crates/fossil-graph/tests/snapshots/schemas__get_vertex_params.snap
---
source: crates/fossil-graph/tests/schemas.rs
expression: "schema_for! (discovery::GetVertexParams)"
---
$schema: "http://json-schema.org/draft-07/schema#"
title: GetVertexParams
type: object
required:
  - subject
  - vertex_type
properties:
  subject:
    description: "The vertex's `subject` IRI (unique across the graph)."
    type: string
  vertex_type:
    type: string
additionalProperties: false
