crates/fossil-graph/tests/snapshots/schemas__get_vertex_result.snap
---
source: crates/fossil-graph/tests/schemas.rs
expression: "schema_for! (discovery::GetVertexResult)"
---
$schema: "http://json-schema.org/draft-07/schema#"
title: GetVertexResult
type: object
properties:
  vertex:
    description: "The matched vertex's user-facing property columns (reserved columns filtered) as a JSON object; `null` when no vertex has that subject."
