crates/fossil-graph/tests/snapshots/schemas__histogram_params.snap
---
source: crates/fossil-graph/tests/schemas.rs
expression: "schema_for! (aggregate::HistogramParams)"
---
$schema: "http://json-schema.org/draft-07/schema#"
title: HistogramParams
type: object
required:
  - field
  - vertex_type
properties:
  bins:
    default: 50
    type: integer
    format: uint32
    minimum: 0
  field:
    type: string
  vertex_type:
    type: string
additionalProperties: false
