crates/fossil-graph/tests/snapshots/schemas__histogram_result.snap
---
source: crates/fossil-graph/tests/schemas.rs
expression: "schema_for! (aggregate::HistogramResult)"
---
$schema: "http://json-schema.org/draft-07/schema#"
title: HistogramResult
type: object
required:
  - counts
  - edges
  - field_kind
properties:
  counts:
    description: Per-bin counts.
    type: array
    items:
      type: integer
      format: uint64
      minimum: 0
  edges:
    description: "Bin edges (length `bins + 1` for numeric, `bins` for categorical)."
    type: array
    items:
      type: number
      format: double
  field_kind:
    description: Field role echoed back so the caller can pick the right chart.
    allOf:
      - $ref: "#/definitions/HistogramKind"
definitions:
  HistogramKind:
    type: string
    enum:
      - numeric
      - temporal
      - categorical
