crates/fossil-graph/tests/snapshots/schemas__list_edge_types_params.snap
---
source: crates/fossil-graph/tests/schemas.rs
expression: "schema_for! (schema::ListEdgeTypesParams)"
---
$schema: "http://json-schema.org/draft-07/schema#"
title: ListEdgeTypesParams
type: object
additionalProperties: false
