crates/fossil-graph/tests/snapshots/schemas__list_edge_types_result.snap
---
source: crates/fossil-graph/tests/schemas.rs
expression: "schema_for! (schema::ListEdgeTypesResult)"
---
$schema: "http://json-schema.org/draft-07/schema#"
title: ListEdgeTypesResult
type: object
required:
  - edges
properties:
  edges:
    type: array
    items:
      $ref: "#/definitions/EdgeTypeSummary"
definitions:
  EdgeTypeSummary:
    type: object
    required:
      - count
      - iri
      - name
      - source_type
      - table_name
      - target_type
    properties:
      count:
        type: integer
        format: uint64
        minimum: 0
      iri:
        type: string
      name:
        type: string
      source_type:
        type: string
      table_name:
        description: "Convenience: DuckDB view name `{source}_{name}_{target}`. Pre-computed here so bindings don't reimplement the GraphAr edge naming convention."
        type: string
      target_type:
        type: string
