crates/fossil-graph/tests/snapshots/schemas__list_vertex_types_params.snap
---
source: crates/fossil-graph/tests/schemas.rs
expression: "schema_for! (schema::ListVertexTypesParams)"
---
$schema: "http://json-schema.org/draft-07/schema#"
title: ListVertexTypesParams
type: object
additionalProperties: false
