crates/fossil-graph/tests/snapshots/schemas__list_vertex_types_result.snap
---
source: crates/fossil-graph/tests/schemas.rs
expression: "schema_for! (schema::ListVertexTypesResult)"
---
$schema: "http://json-schema.org/draft-07/schema#"
title: ListVertexTypesResult
type: object
required:
  - types
properties:
  types:
    type: array
    items:
      $ref: "#/definitions/VertexTypeSummary"
definitions:
  VertexTypeSummary:
    type: object
    required:
      - count
      - fields
      - iri
      - name
    properties:
      count:
        description: Vertex count from the manifest.
        type: integer
        format: uint64
        minimum: 0
      fields:
        description: "Field names for downstream calls to `describe_field`."
        type: array
        items:
          type: string
      iri:
        description: Full RDF type IRI.
        type: string
      name:
        description: "Short local name as used in DuckDB table identifier (e.g. `\"Person\"`)."
        type: string
